[tool.poetry]
name = "cipher_ael2193"
version = "0.1.0"
description = "Python package that uses cipher function to transform words"
authors = ["Andrew <ael2193@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^3.3.1"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
codecov = "^2.1.10"
python-semantic-release = "^7.3.0"
flake8 = "^3.8.4"
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
